--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,17 @@
         </dependency>
         <!-- more dependencies ... -->
     </dependencies>
+    <build>
+        <finalName>maven-unit-test</finalName>
+        <plugins>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
+
+        </plugins>
+    </build>
 
 </project>
